Fix Color as Alpha and Preserve Alpha in Custom and Clipboard brushes

The checkboxes has been broken during the lightness/gradient
refactoring.

BUG:432274