plugins/paintops/libpaintop/kis_clipboard_brush_widget.cpp
@@ -40,8 +40,9 @@ KisClipboardBrushWidget::KisClipboardBrushWidget(QWidget *parent, const QString 
 
     m_clipboard = KisClipboard::instance();
 
-    connect(m_clipboard, SIGNAL(clipChanged()), this, SLOT(slotCreateBrush()));
+    connect(m_clipboard, SIGNAL(clipChanged()), this, SLOT(slotClipboardContentChanged()));
     connect(colorAsmask, SIGNAL(toggled(bool)), this, SLOT(slotUpdateUseColorAsMask(bool)));
+    connect(preserveAlpha, SIGNAL(toggled(bool)), this, SLOT(slotCreateBrush()));
     connect(buttonBox, SIGNAL(accepted()), this, SLOT(slotAddPredefined()));
     connect(nameEdit, SIGNAL(textEdited(const QString&)), this, SLOT(slotUpdateSaveButton()));
 
@@ -51,6 +52,16 @@ KisClipboardBrushWidget::KisClipboardBrushWidget(QWidget *parent, const QString 
 
 KisClipboardBrushWidget::~KisClipboardBrushWidget()
 {
+}
+
+void KisClipboardBrushWidget::slotClipboardContentChanged()
+{
+    slotCreateBrush();
+    if (m_brush) {
+        colorAsmask->setChecked(true); // initializing this has to happen here since we need a valid brush for it to work
+        preserveAlpha->setEnabled(true);
+        preserveAlpha->setChecked(false);
+    }
 }
 
 void KisClipboardBrushWidget::slotCreateBrush()
@@ -70,6 +81,11 @@ void KisClipboardBrushWidget::slotCreateBrush()
             m_brush->setName(TEMPORARY_CLIPBOARD_BRUSH_NAME);
             m_brush->setValid(true);
 
+            static_cast<KisGbrBrush*>(m_brush.data())->setBrushApplication(colorAsmask->isChecked() ? ALPHAMASK : IMAGESTAMP);
+            if (colorAsmask->isChecked()) {
+                static_cast<KisGbrBrush*>(m_brush.data())->makeMaskImage(preserveAlpha->isChecked());
+            }
+
             int w = preview->size().width()-10;
             preview->setPixmap(QPixmap::fromImage(m_brush->image().scaled(w, w, Qt::KeepAspectRatio)));
         }
@@ -81,9 +97,6 @@ void KisClipboardBrushWidget::slotCreateBrush()
         buttonBox->button(QDialogButtonBox::Save)->setEnabled(false);
     } else {
         buttonBox->button(QDialogButtonBox::Save)->setEnabled(true);
-        colorAsmask->setChecked(true); // initializing this has to happen here since we need a valid brush for it to work
-        preserveAlpha->setEnabled(true);
-        preserveAlpha->setChecked(false);
     }
 }
 
@@ -97,17 +110,13 @@ void KisClipboardBrushWidget::slotSpacingChanged()
 
 void KisClipboardBrushWidget::showEvent(QShowEvent *)
 {
-    slotCreateBrush();
+    slotClipboardContentChanged();
 }
 
 void KisClipboardBrushWidget::slotUpdateUseColorAsMask(bool useColorAsMask)
 {
     preserveAlpha->setEnabled(useColorAsMask);
-    if (m_brush) {
-        static_cast<KisGbrBrush*>(m_brush.data())->setBrushApplication(useColorAsMask ? ALPHAMASK : IMAGESTAMP);
-        int w = preview->size().width()-10;
-        preview->setPixmap(QPixmap::fromImage(m_brush->image().scaled(w, w, Qt::KeepAspectRatio)));
-    }
+    slotCreateBrush();
 }
 
 void KisClipboardBrushWidget::slotAddPredefined()
